# verra-qa

./: README.md  pyproject.toml
verra/: __init__.py  qa.ipynb  qa.py  schema.py
